[package]
name = "test_rover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "0.1.10"
unicode-xid = "0.2.4"
cast_any = { path = "../cast_any_macro" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
math_parser = { path = "math_parser" }
