[package]
name = "math_parser"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
matches = "0.1.10"
unicode-xid = "0.2.4"
macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.20"
once_cell = "1.19"
chrono = { version = "0.4", features = [] }